# julia-bench-rs

./: .travis.yml  Cargo.toml  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: rust.yml
src/: direct_blas.rs  main.rs  util.rs
