[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
name = "julia-bench"
version = "0.1.0"

[dependencies]
num = "0.4.3"
rand = "0.9"
rand_mt = { version = "5.0.0", features = ["rand-traits"] }

[dependencies.cblas]
version = "0.5"
optional = true

[dependencies.cblas-sys]
version = "0.3"

[dependencies.ndarray]
features = ["blas"]
version = "0.16.1"

[dependencies.blas-src]
features = ["openblas"]
version = "0.10"

[dependencies.openblas-src]
features = ["cblas", "system"]
version = "0.10.12"

[features]
default = []
direct_blas = ["cblas"]
